2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_class_init, dh_search_grab_focus):
	Prepare to get rid of dh_search_grab_focus().

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c: (dh_assistant_init): Set window title.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Undeprecate by s/GtkType/GType/.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_new): Replace deprecated API.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/eggfindbar.c: Sync from evince to get rid of deprecated
	APIs. Reapply the removal of property translations.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-search.h: Remove show_advanced function here too, it was
	removed in the C file already.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: Add experimental state saving code to be used
	soon.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-util.c (dh_util_build_data_filename): Don't include the
	"devhelp" directory component.

	* src/dh-assistant-view.c (dh_assistant_view_set_link): Add
	"devhelp" component here.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-assistant-view.[ch]: Consistency fixes after the
	refactoring: Don't use "self", use some form of the name of the
	class. Use parent_class and parent_instance in class/instance
	structs. Add copyright back, it's the same old code moved to a new
	file.

2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c (dh_assistant_init): Remove unused includes
	and the webkit API usage left over from the move to
	DhAssistantView. Rename web_view to view.

2008-10-09  Sven Herzberg  <sven@imendio.com>

	Drop the "_cp" suffix of the old callbacks, now they are vfunc
	implementations

	* src/dh-assistant-view.c: for more consistency with the rest of the
	code

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Dropped the refactoring helpers
