@@ -1,5 +1,10 @@
 2008-10-10  Richard Hult  <richard@imendio.com>
 
+	* data/Makefile.am: Install gconf schemas in file so ige-conf can
+	use it for defaults handling when using NSUserDefaults.
+
+2008-10-10  Richard Hult  <richard@imendio.com>
+
 	* src/dh-search.c: (dh_search_class_init, dh_search_grab_focus):
 	Prepare to get rid of dh_search_grab_focus().
 
